--- a/browser/index.html
+++ b/browser/index.html
@@ -28,6 +28,24 @@
                 color: #d81a1a;
                 cursor: pointer;
             }
+            #options a:hover::after {
+                content: attr(data-tooltip);
+                font-size: 12px;
+                color: silver;
+                background: black;
+                padding-left: 1em;
+                z-index: 9999;
+                padding-right: 1em;
+                margin:0px;
+                opacity: .8;
+                border-radius: 6px;
+                white-space:nowrap;
+                display: block;
+                font-weight: normal;
+                position: absolute;
+                top: 4em;;
+                left: -100%;
+            }
             body {
                 height: 100vh;
                 margin: 0;
@@ -36,11 +54,6 @@
             }
             #app {
                 display: flex;
-                /*flex-direction: column;
-            flex-wrap: nowrap;
-            justify-content: flex-start;
-            align-items: stretch;
-            align-content: stretch;*/
                 width: 100%;
                 height: 100%;
             }
@@ -85,6 +98,7 @@
                 padding-right: 0.5em;
                 padding-top: 0.5em;
                 padding-bottom: 0.5em;
+
             }
             #language-select {
                 font-size: x-large;
@@ -137,7 +151,7 @@
     </head>
     <body>
         <div id="options">
-            <h1>LaunchDarkly Context Generator <a id="hashlink" href="#" title="Copy permalink">#</a><a id="resetlink" href="#" title="Reset">&#x232B;</a></h1>
+            <h1>LaunchDarkly Context Generator <a id="hashlink" href="#" data-tooltip="Copy permalink">#</a><a id="resetlink" href="#"  data-tooltip="Reset to default context">&#x232B;</a></h1>
             <div id="select-wrapper">
                 <label id="language-label" for="language-select"
                     >Language:</label
