add cpp support

--- a/browser/index.html
+++ b/browser/index.html
@@ -161,6 +161,7 @@
     </head>
     <body>
         <div id="options">
+            asdf
             <h1>LaunchDarkly Context Generator <a id="hashlink" href="#" data-done="Copied!" data-tooltip="Copy permalink">#</a><a id="resetlink" href="#" data-done="Reset!" data-tooltip="Reset to default context">&#x232B;</a></h1>
             <div id="select-wrapper">
                 <label id="language-label" for="language-select"
